--- a/client.html
+++ b/client.html
@@ -8,13 +8,14 @@
         // get img dom element
         const img = document.querySelector('img');
         
-        // const WS_URL = location.origin.replace(/^http/, 'ws');
-        const WS_URL = 'ws://192.168.107.136:3001';
+        const WS_URL = 'ws://192.168.107.136:8090/wsin';
+        
         const ws = new WebSocket(WS_URL);
         ws.onopen = () => console.log(`Connected to ${WS_URL}`);
+
         ws.onmessage = message => {
             // set the base64 string to the src tag of the image
-            img.src = message.data;
+            img.src = message.data.replace(/{/g, '').replace(/}/g, '').replace(/"/g, '');
         }
     </script>
 </body>
