--- a/client.html
+++ b/client.html
@@ -3,7 +3,7 @@
     <title>Client</title>
 </head>
 <body>
-    <img src="">
+    <img src="" alt="">
     <script>
         // get img dom element
         const img = document.querySelector('img');
@@ -14,8 +14,7 @@
         ws.onopen = () => console.log(`Connected to ${WS_URL}`);
 
         ws.onmessage = message => {
-            // set the base64 string to the src tag of the image
-            img.src = message.data.replace(/{/g, '').replace(/}/g, '').replace(/"/g, '');
+            img.src=message.data;
         }
     </script>
 </body>
